fixed media query to actually work on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -215,7 +215,7 @@ footer nav a {
     }
     .aboutPics{
         flex-flow: column nowrap;
-        justify-content: center;
+        align-items: center;
     }
     .aboutPics div{
         width: 95%;
